<resources>
    <string name="app_name">Slate</string>
    <string name="draw_mode">Draw Mode</string>
    <string name="move_mode">Move Mode</string>
    <string name="delete_mode">Delete Mode</string>
    <string name="select_color">Select Color</string>
    <string name="black">Black</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
</resources>
